Crash when selecting joined tracks #65071

Closed
opened 2019-05-24 14:27:30 +02:00 by Fred · 5 comments

System Information
Operating system: Linux-4.18.0-20-generic-x86_64-with-Ubuntu-18.04-bionic 64 Bits
Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.14

Blender Version
Broken: version: 2.80 (sub 72), branch: master, commit date: 2019-05-24 12:23, hash: 946217e503

Short description of error
blender crashes after merging tracks and selecting them

Exact steps for others to reproduce the error
track something then merge the tracks then select them.

**System Information** Operating system: Linux-4.18.0-20-generic-x86_64-with-Ubuntu-18.04-bionic 64 Bits Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.14 **Blender Version** Broken: version: 2.80 (sub 72), branch: master, commit date: 2019-05-24 12:23, hash: `946217e503` **Short description of error** blender crashes after merging tracks and selecting them **Exact steps for others to reproduce the error** track something then merge the tracks then select them.
Author

Added subscriber: @Fred_The_Fantastical

Added subscriber: @Fred_The_Fantastical
Jacques Lucke changed title from track error to Crash when selecting joined tracks 2019-05-24 14:36:36 +02:00
Member

Added subscribers: @Sergey, @JacquesLucke

Added subscribers: @Sergey, @JacquesLucke
Member

BLI_listbase_count(tracksbase_src) = 1 and BLI_listbase_count(tracksbase_dst) = 2, but the code seems to assume that both lists have the same length.

movieclip_selection_synchronize(MovieClip * clip_dst, const MovieClip * clip_src) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/movieclip.c:1756)
BKE_movieclip_eval_selection_update(struct Depsgraph * depsgraph, MovieClip * clip) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/movieclip.c:1776)
std::__invoke_impl<void, void (*&)(Depsgraph*, MovieClip*), Depsgraph*, MovieClip*&>(void (*&)(Depsgraph *, MovieClip *) __f,  __args#0,  __args#1) (/usr/include/c++/7/bits/invoke.h:60)
std::__invoke<void (*&)(Depsgraph*, MovieClip*), Depsgraph*, MovieClip*&>(void (*&)(Depsgraph *, MovieClip *) __fn,  __args#0,  __args#1) (/usr/include/c++/7/bits/invoke.h:95)
std::_Bind<void (*(std::_Placeholder<1>, MovieClip*))(Depsgraph*, MovieClip*)>::__call<void, Depsgraph*&&, 0ul, 1ul>(std::tuple<Depsgraph*&&>&&, std::_Index_tuple<0ul, 1ul>)(std::_Bind<void (*(std::_Placeholder<1>, MovieClip*))(Depsgraph*, MovieClip*)> * const this, std::tuple<Depsgraph*&&> && __args) (/usr/include/c++/7/functional:467)
std::_Bind<void (*(std::_Placeholder<1>, MovieClip*))(Depsgraph*, MovieClip*)>::operator()<Depsgraph*, void>(Depsgraph*&&)(std::_Bind<void (*(std::_Placeholder<1>, MovieClip*))(Depsgraph*, MovieClip*)> * const this,  __args#0) (/usr/include/c++/7/functional:551)
std::_Function_handler<void (Depsgraph*), std::_Bind<void (*(std::_Placeholder<1>, MovieClip*))(Depsgraph*, MovieClip*)> >::_M_invoke(std::_Any_data const&, Depsgraph*&&)(const std::_Any_data & __functor,  __args#0) (/usr/include/c++/7/bits/std_function.h:316)
std::function<void (Depsgraph*)>::operator()(Depsgraph*) const(const std::function<void(Depsgraph*)> * const this,  __args#0) (/usr/include/c++/7/bits/std_function.h:706)
DEG::deg_task_run_func(TaskPool * pool, void * taskdata, int thread_id) (/home/jacques/blender-git/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:86)
task_scheduler_thread_run(void * thread_p) (/home/jacques/blender-git/blender/source/blender/blenlib/intern/task.c:438)
start_thread(void * arg) (/build/glibc-OTsEL5/glibc-2.27/nptl/pthread_create.c:463)
clone() (/build/glibc-OTsEL5/glibc-2.27/sysdeps/unix/sysv/linux/x86_64/clone.S:95)
`BLI_listbase_count(tracksbase_src) = 1` and `BLI_listbase_count(tracksbase_dst) = 2`, but the code seems to assume that both lists have the same length. ``` movieclip_selection_synchronize(MovieClip * clip_dst, const MovieClip * clip_src) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/movieclip.c:1756) BKE_movieclip_eval_selection_update(struct Depsgraph * depsgraph, MovieClip * clip) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/movieclip.c:1776) std::__invoke_impl<void, void (*&)(Depsgraph*, MovieClip*), Depsgraph*, MovieClip*&>(void (*&)(Depsgraph *, MovieClip *) __f, __args#0, __args#1) (/usr/include/c++/7/bits/invoke.h:60) std::__invoke<void (*&)(Depsgraph*, MovieClip*), Depsgraph*, MovieClip*&>(void (*&)(Depsgraph *, MovieClip *) __fn, __args#0, __args#1) (/usr/include/c++/7/bits/invoke.h:95) std::_Bind<void (*(std::_Placeholder<1>, MovieClip*))(Depsgraph*, MovieClip*)>::__call<void, Depsgraph*&&, 0ul, 1ul>(std::tuple<Depsgraph*&&>&&, std::_Index_tuple<0ul, 1ul>)(std::_Bind<void (*(std::_Placeholder<1>, MovieClip*))(Depsgraph*, MovieClip*)> * const this, std::tuple<Depsgraph*&&> && __args) (/usr/include/c++/7/functional:467) std::_Bind<void (*(std::_Placeholder<1>, MovieClip*))(Depsgraph*, MovieClip*)>::operator()<Depsgraph*, void>(Depsgraph*&&)(std::_Bind<void (*(std::_Placeholder<1>, MovieClip*))(Depsgraph*, MovieClip*)> * const this, __args#0) (/usr/include/c++/7/functional:551) std::_Function_handler<void (Depsgraph*), std::_Bind<void (*(std::_Placeholder<1>, MovieClip*))(Depsgraph*, MovieClip*)> >::_M_invoke(std::_Any_data const&, Depsgraph*&&)(const std::_Any_data & __functor, __args#0) (/usr/include/c++/7/bits/std_function.h:316) std::function<void (Depsgraph*)>::operator()(Depsgraph*) const(const std::function<void(Depsgraph*)> * const this, __args#0) (/usr/include/c++/7/bits/std_function.h:706) DEG::deg_task_run_func(TaskPool * pool, void * taskdata, int thread_id) (/home/jacques/blender-git/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:86) task_scheduler_thread_run(void * thread_p) (/home/jacques/blender-git/blender/source/blender/blenlib/intern/task.c:438) start_thread(void * arg) (/build/glibc-OTsEL5/glibc-2.27/nptl/pthread_create.c:463) clone() (/build/glibc-OTsEL5/glibc-2.27/sysdeps/unix/sysv/linux/x86_64/clone.S:95) ```

This issue was referenced by 1b60b6edf1

This issue was referenced by 1b60b6edf176ae0dc6a0506d2edffdb1788585f3
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65071
No description provided.