Fix T65071: Crash when selecting joined tracks